# ai-project

./: .env  .env.example  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: auto_retrain.yml  cd.yml  ci.yml  iac_validation.yml  monitoring-dashboard.yml  monitoring.yml  security_audit.yml  smoke_test.yml
config/: api_config.yaml  clinical_guidelines.json  data_config.yaml  drug_interactions.json  fallback_rules.json  feature_store_config.yaml  main_config.yaml  model_config.yaml  training_config.yaml  users.json
dashboard/: explainability_panel.py  patient_view.py
data/versioned/: dataset.dvc
data/versioned/models/: model_v1.pkl.dvc
experiments/mlflow/: __init__.py
infrastructure/docker/: Dockerfile
infrastructure/kubernetes/: canary.yaml  configmap.yaml  cronjob.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  pod-disruption-budget.yaml  pvc-stateful.yaml  pvc.yaml  role.yaml  rolebinding.yaml  secrets.yaml  service-monitor.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
infrastructure/kubernetes/overlays/production/: kustomization.yaml
infrastructure/terraform/: alb.tf  ec2.tf  eks.tf  iam.tf  main.tf  outputs.tf  rds.tf  s3.tf  security.tf  variables.tf  vpc.tf
notebooks/: exploratory_analysis.ipynb
observability/alertmanager/: config.yml
observability/blackbox/: config.yml
observability/grafana/dashboards/: canary-dashboard.json  cdss-dashboard.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: datasources.yml
observability/loki/: loki-config.yaml
observability/prometheus/: alerts.yml  prometheus.yml  rules.yml
observability/promtail/: promtail-config.yaml
observability/tempo/: tempo-config.yaml
outputs/: __init__.py
scripts/: auto_retrain.py  canary-deploy.sh  deploy.py  monitor_canary.py  promote_model.py  register_model.py  run_migrations.py  security_audit.py  setup_outputs.py  train.py  validate.py
src/: __init__.py  config_manager.py  logger.py
src/api/: __init__.py  app.py  dependencies.py  middleware.py  routes.py  schemas.py
src/async_tasks/: __init__.py  celery_worker.py  dlq.py  tasks.py
src/caching/: __init__.py  cache_decorator.py  cache_manager.py  redis_client.py
src/clinical/: clinical_guidelines.py
src/components/: __init__.py  clinical_decision.py  confidence_threshold.py  data_ingestion.py  explainability.py  fallback_system.py  human_review.py  model_calibration.py  model_evaluation.py  model_registry.py  model_training.py  preprocessing.py  reporting.py
src/data/: data_manager.py  pipeline.py
src/feature_store/: __init__.py  feature_engineering.py  feature_registry.py  online_store.py
src/monitoring/: __init__.py  alerting.py  bias_monitor.py  comprehensive_drift.py  drift_detection.py  drift_monitor.py  ground_truth_pipeline.py  metrics_monitor.py  prometheus.py  security_monitor.py
src/orchestration/: __init__.py  airflow_dag.py  scheduler.py
src/pipelines/: __init__.py  inference_pipeline.py  training_pipeline.py
src/security/: __init__.py  auth.py  encryption.py  rate_limiter.py
src/utils/: __init__.py  circuit_breaker.py  file_utils.py  log_sanitizer.py  metrics_utils.py  model_utils.py
src/validation/: __init__.py  adversarial_protection.py  schema_validation.py
tests/api/: __init__.py  conftest.py  test_authentication.py  test_batch_predict.py  test_explainability.py  test_predict.py  test_rate_limiting.py  test_validation.py
tests/api/fixtures/: patient_data.json
tests/integration/: test_golden_cases.py
tests/load/: locustfile.py
tests/smoke/: test_smoke.py
tests/unit/: test_models.py
