[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdss-healthcare"
version = "3.0.0"
description = "Explainable Clinical Decision Support System"
readme = "README.md"
authors = [
    {name = "AI Healthcare Team", email = "ai@healthcare.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
    "shap>=0.40.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.5.0",
    "fastapi>=0.85.0",
    "uvicorn>=0.18.0",
    "pydantic>=1.10.0",
    "streamlit>=1.12.0",
    "mlflow>=2.0.0",
    "celery>=5.2.0",
    "redis>=4.5.0",
    "prometheus-client>=0.14.0",
    "aiofiles>=22.0.0",
    "pandera>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
cdss-train = "scripts.train:main"
cdss-deploy = "scripts.deploy:main"
cdss-validate = "scripts.validate:main"

[tool.black]
line-length = 127
target-version = ['py38', 'py39']

[tool.isort]
profile = "black"
line_length = 127

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true